force-app/main/default/objects/PF_Release__c/PF_Release__c.object-meta.xml
<CustomObject>
    <description>This is where project releases will be captured within the ProjectForce application.</description>
    <label>Release</label>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>