force-app/main/default/objects/PF_Release__c/fields/PF_Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PF_Actual_Start_Date__c</fullName>
    <description>Identifies the actual start date of the release.</description>
    <inlineHelpText>Select the date when the release actually started.</inlineHelpText>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>