force-app/main/default/objects/PF_Release__c/fields/PF_Approach_Strategy__c.field-meta.xml
<CustomField>
    <fullName>PF_Approach_Strategy__c</fullName>
    <description>This describes the approach of how the release will be accomplished.</description>
    <inlineHelpText>This describes the approach of how the release will be accomplished.</inlineHelpText>
    <label>Approach (Strategy)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>