force-app/main/default/objects/PF_Release__c/fields/PF_Deployment_Instance__c.field-meta.xml
<CustomField>
    <fullName>PF_Deployment_Instance__c</fullName>
    <label>Deployment Instance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>QA Sandbox</fullName>
            </value>
            <value>
                <fullName>SIT</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>