force-app/main/default/objects/PF_Release__c/fields/PF_Key_Deliverables__c.field-meta.xml
<CustomField>
    <fullName>PF_Key_Deliverables__c</fullName>
    <description>This describes the Key deliverables/Outcome for the release.</description>
    <inlineHelpText>This describes the Key deliverables/Outcome for the release.</inlineHelpText>
    <label>Key Deliverables</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>