force-app/main/default/objects/PF_Release__c/fields/PF_Objectives__c.field-meta.xml
<CustomField>
    <fullName>PF_Objectives__c</fullName>
    <description>This describes the Objectives of the release.</description>
    <inlineHelpText>This describes the Objectives of the release.</inlineHelpText>
    <label>Objectives</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>