force-app/main/default/objects/PF_Release__c/fields/PF_Planned_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PF_Planned_End_Date__c</fullName>
    <description>Identifies the planned end date of the release .</description>
    <inlineHelpText>Select the planned end date for the release.</inlineHelpText>
    <label>Planned End Date</label>
    <type>Date</type>
</CustomField>