force-app/main/default/objects/PF_Release__c/fields/PF_Planned_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PF_Planned_Start_Date__c</fullName>
    <description>Identifies the Planned start date of the release.</description>
    <inlineHelpText>Select the planned start date for the release</inlineHelpText>
    <label>Planned Start Date</label>
    <type>Date</type>
</CustomField>