force-app/main/default/objects/PF_Release__c/fields/PF_Project__c.field-meta.xml
<CustomField>
    <fullName>PF_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the related Project for this release.</inlineHelpText>
    <label>Project</label>
    <referenceTo>PF_Project__c</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Releases</relationshipName>
    <type>Lookup</type>
</CustomField>