force-app/main/default/objects/PF_Release__c/fields/PF_Release_Number__c.field-meta.xml
<CustomField>
    <fullName>PF_Release_Number__c</fullName>
    <displayFormat>REL-{00000}</displayFormat>
    <label>Release Number</label>
    <type>AutoNumber</type>
</CustomField>