force-app/main/default/objects/PF_Release__c/fields/PF_Release_Type__c.field-meta.xml
<CustomField>
    <fullName>PF_Release_Type__c</fullName>
    <inlineHelpText>Select the release type (Minor/ Major/ Patch)</inlineHelpText>
    <label>Release Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Patch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>