force-app/main/default/objects/PF_Release__c/recordTypes/PF_Release.recordType-meta.xml
<RecordType>
    <fullName>PF_Release</fullName>
    <active>true</active>
    <description>Standard pForce record type.</description>
    <label>Release</label>
</RecordType>